# Backend_Sales_Sync

./: .env.example  .gitignore  README.md  docker-compose.yml  docs.md  generate_erd.py  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/ai/: email_agent.py  icp_agent.py  lead_analyzer.py  meeting_agent.py  proposal_agent.py  proposal_evaluator.py  supervisor_agent.py
app/core/: cache.py  crypto.py  rate_limit.py  redis.py  s3.py  security.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  calcom_credentials.py  chat.py  email.py  google_credentials.py  icp.py  knowledge_base.py  lead.py  leads_pool.py  meeting.py  proposal.py  subscription.py  team.py  team_member.py  user.py
app/routers/: auth.py  billing.py  chat.py  emails.py  integrations.py  knowledge_base.py  leads.py  meetings.py  onboarding.py  proposals.py  teams.py
app/schemas/: auth.py  calcom.py  chat.py  common.py  emails.py  knowledge_base.py  leads.py  meetings.py  onboarding.py  proposals.py  teams.py
app/services/: auth_service.py  billing_service.py  calcom_service.py  chat_agents.py  chat_service.py  emails_service.py  gmail_service.py  grok_service.py  knowledge_base_rag_service.py  knowledge_base_service.py  leads_service.py  meetings_service.py  onboarding_service.py  proposals_service.py  teams_service.py  temp.py  temp3.py
backend/: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
migrations/: env.py
migrations/versions/: 20260709_add_stripe_subscription_fields.py  20260715_kb_rag.py  (+5 more)
(+19 files in other folders)
