[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "boto3>=1.43.42",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "stripe>=15.3.0",
    "upstash-redis>=1.7.0",
    "upstash-ratelimit>=1.1.0",
    "uvicorn>=0.49.0",
    "resend>=2.32.2",
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "eralchemy2>=1.4.1",
]
